# pixelserver

./: .gitignore  CMakeLists.txt  README.md  a.out  build  cmake_install.cmake  http_api.cpp  init.sh  main.cpp  mqtt.c  pixeldecke  pixelflut.c  serial.cpp  serial_control.cpp  utils.cpp
cmake/Modules/: FindMOSQUITTO.cmake
examples/: counter
html/: index.html
libs/: can.cpp  can.h  gason.h
libs/mosquitto/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
libs/mosquitto/client/: Makefile  cmake_install.cmake  mosquitto_pub  mosquitto_sub
libs/mosquitto/lib/: Makefile  cmake_install.cmake  libmosquitto.so.1  libmosquitto.so.1.4.9
libs/mosquitto/lib/cpp/: Makefile  cmake_install.cmake  libmosquittopp.so.1  libmosquittopp.so.1.4.9
libs/mosquitto/man/: Makefile  cmake_install.cmake  libmosquitto.3  mosquitto-tls.7  mosquitto.8  mosquitto.conf.5  mosquitto_passwd.1  mosquitto_pub.1  mosquitto_sub.1  mqtt.7
libs/mosquitto/src/: Makefile  cmake_install.cmake  mosquitto  mosquitto_passwd
src/: build  main.cpp  test.cpp
src/animations/: animations.cpp
src/arduino/: FastLED_RGBW.h  GlediatorFastLedRGBW.ino
src/arduino/lib/: OctoSK6812.h
src/http/: http_api.cpp
src/mqtt/: mqtt.cpp
src/pixelflut/: pixelflut.c_  pixelflut.cpp
src/serial/: serial.cpp  serial.hpp  serial_control.cpp
src/utils/: utils.cpp
